# robotic-chess

./: CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  config.ini  example.gcode  gcode.py  gcode_howto.md  metadata.json  output.gcode  pyproject.toml  requirements.txt  robotic_chess.html  setup.py  test.gcode  test.rb  tests.py
.github/: dependabot.yml
.github/workflows/: python-package.yml
chess/: __init__.py  pyproject.toml
chess/src/: chess.py
chess/src/chesslib.egg-info/: PKG-INFO  SOURCES.txt
docs/: README.md  gcode.md
gcode/: pyproject.toml
gcode/src/: gcode.py
gcode/src/gcodelib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pieces-ai/: README.md
robotic_chess/src/: __init__.py
robotic_chess/src/robotic_chess.egg-info/: PKG-INFO  SOURCES.txt
src/robotic-chess/: chess.py  gcode.py
src/robotic_chess/: __init__.py  __main__.py  chess.py  engine.py  gcode.py  octoprint.py
src/robotic_chess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
start-ai/: README.md  metadata.json
