[build-system]
requires = ["setuptools>=61.0","stockfish==3.28.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotic-chess"
version = "0.1"
authors = [
  { name="Benjamin Porter", email="bcgcustomerservices@gmail.com" },
]
description = "A 3D printer-based chess playing robot."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hippoprogrammer/robotic-chess"
Issues = "https://github.com/hippoprogrammer/robotic-chess/issues"