[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotic_chess"
version = "0.2.4"
authors = [
  { name="Benjamin Porter", email="bcgcustomerservices@gmail.com" },
]
description = "A 3D printer-based chess playing robot."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "stockfish==3.28.0",
    "octoprint-cli==3.3.2"
]

[project.urls]
Homepage = "https://github.com/hippoprogrammer/robotic-chess"
Issues = "https://github.com/hippoprogrammer/robotic-chess/issues"
