[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotic_chess"
version = "1.0rc1"
authors = [
  { name="Benjamin Porter", email="bcgcustomerservices@gmail.com" },
]
description = "A 3D printer-based chess playing robot."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "stockfish@git+https://github.com/zhelyabuzhsky/stockfish.git#egg=3.28.0",
    "octoprint-cli==3.3.2",
    "chess==1.10.0"
]

[project.urls]
Homepage = "https://github.com/hacking3dprinters/robotic-chess"
Issues = "https://github.com/hacking3dprinters/robotic-chess/issues"
